POR/RefEdge/src/objects/Data_Mapping__c.object
<CustomObject>
    <description>Nominations(Bound 4)</description>
    <fields>
        <fullName>DC_Message__c</fullName>
        <label>DC Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Collector_Name__c</fullName>
        <label>Data Collector Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <label>Default</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_RefSearch_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter RefSearch Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter</label>
        <referenceTo>Label__c</referenceTo>
        <relationshipLabel>Data Mappings</relationshipLabel>
        <relationshipName>Data_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nomination</fullName>
                </value>
                <value>
                    <fullName>NominationSectionHeader</fullName>
                </value>
                <value>
                    <fullName>Filter</fullName>
                </value>
                <value>
                    <fullName>Reference Lead</fullName>
                </value>
                <value>
                    <fullName>ReferenceLeadSectionHeader</fullName>
                </value>
                <value>
                    <fullName>DMReference_Content__c</fullName>
                </value>
                <value>
                    <fullName>DMReference_Basic_Information__c</fullName>
                </value>
                <value>
                    <fullName>DMReference_Content_Type__c</fullName>
                </value>
                <value>
                    <fullName>DMAttribute__c</fullName>
                </value>
                <value>
                    <fullName>DMContentVersion</fullName>
                </value>
                <value>
                    <fullName>Notification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_change__c</fullName>
        <label>Opportunity Stage change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Data Mappings</relationshipLabel>
        <relationshipName>Data_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Coverage__c</fullName>
        <label>Program Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ref_Search_Coverage__c</fullName>
        <label>Ref Search Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Referenceability_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referenceability Type</label>
        <referenceTo>Referenceability_Type__c</referenceTo>
        <relationshipLabel>Data Mappings</relationshipLabel>
        <relationshipName>Data_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <label>Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Position__c</fullName>
        <label>Section Position</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Data Mapping</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>